Donut: Fix gap issue and add labels

--- a/public/css/icinga/charts.less
+++ b/public/css/icinga/charts.less
@@ -51,3 +51,27 @@
   fill: @text-color;
 }
 
+.svg-donut-label {
+  -moz-transform: translateY(0.3em);
+  -ms-transform: translateY(0.3em);
+  -webkit-transform: translateY(0.3em);
+  transform: translateY(0.3em);
+}
+
+.svg-donut-label-big {
+  fill: @color-critical;
+  font-size: 1.3em;
+  line-height: 1;
+  text-anchor: middle;
+}
+
+.svg-donut-label-small {
+  fill: @text-color;
+  font-size: 0.15em;
+  text-transform: lowercase;
+  text-anchor: middle;
+  -moz-transform: translateY(0.35em);
+  -ms-transform: translateY(0.35em);
+  -webkit-transform: translateY(0.35em);
+  transform: translateY(0.35em);
+}
